--- a/view/detail.html
+++ b/view/detail.html
@@ -369,9 +369,11 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
   <!-- axios -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
+  
   <script src="../controller/detail.js"></script>
   <script src="../controller/logout.js"></script>
+  <script src="../controller/index.js"></script>
+
 
 </body>
 
